# horizon

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  TODO.md  biome.json  config.schema.json  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  horizon.example.json  landing.html  lefthook.yml  package.json  pnpm-lock.yaml  prometheus.yml  reproduce_issue.ts  reproduction_output.txt  telemetry-id  test-checkpoint-data.json  tree_state.json  tsconfig.json  turbo.json  ultracite.json
.claude/: CLAUDE.md
apps/backend/: .checkpoints.json  .env.example  Dockerfile  config_sample.toml  config_sample.yaml  langgraph.json  package.json  pyproject.toml  sort_array.py  test_config_loading.py  tsconfig.json
apps/backend/src/: index.ts
apps/backend/src/agent/: __init__.py  app.py  checkpointer.py  fs-checkpointer.ts  graph.py  graph.ts  llm_loader.py  model_settings.py  state.py  state.ts  todo.py
apps/backend/src/agent/config/: AgentConfig.py  __init__.py  config_loader.py  model_config.py
apps/backend/src/agent/middleware/: __init__.py  base.py  memory.py  model_call.py  pii.ts  summarization.py  todo.py  tools.py  tracking.py
apps/backend/src/agent/middlewares/: conversation.py
apps/backend/src/agent/nodes/: Agent.ts  ApprovalGate.ts  EndMiddleware.ts  MemoryRetrieval.ts  StartMiddleware.ts  ToolExecution.ts  approval-gate.ts  end-middleware.ts  memory-retrieval.ts  start-middleware.ts  tool-execution.ts
apps/backend/src/agent/prompts/: conversation_summarizer.md  prompts.py
apps/backend/src/agent/sub_agents/: conversation_summerizer.py
apps/backend/src/agent/template/: SYSTEM_PROMPT.template
apps/backend/src/agent/tools/: __init__.py  file_ops.py  file_ops_lite.py  index.ts  web.py
apps/backend/src/assistants/: db.ts  router.ts
apps/backend/src/lib/: config-loader.ts  config.ts  llm.ts
apps/backend/src/middleware/: rate-limit.ts  rateLimit.ts
apps/backend/tests/: conftest.py
apps/backend/tests/integration_tests/: test_graph.py
config/: README.md  config.schema.json  horizon.example.json
docs/: AGENT_IN_LOOP.md  (+4 more)
(+263 files in other folders)
